--- a/run.yml
+++ b/run.yml
@@ -45,5 +45,5 @@
       vars:
           ansible_python_interpreter: /usr/bin/python3
       environment:
-          PATH: /sbin:/usr/sbin:/bin:/usr/bin:/usr/local/bin:/snap/bin
+          PATH: /sbin:/usr/sbin:/bin:/usr/bin:/usr/local/bin:/snap/bin:/usr/local/go/bin
       register: gecko_res
