--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,6 +2,8 @@
 transport = ssh
 deprecation_warnings = false
 library = ./
+#show_custom_stats = true
+#stdout_callback = minimal
 
 [ssh_connection]
 ssh_args = -o ForwardAgent=yes -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null
