--- a/group_vars/ted.yaml
+++ b/group_vars/ted.yaml
@@ -1,6 +1,7 @@
 ansible_connection: ssh
 ansible_user: ymf
 
+bin_name: "gecko"
 testbed_prefix: "~/testbed"
 gecko_network_id: "borealis"
 gecko_repo_dir: "~/go/src/github.com/ava-labs/gecko"
