--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,7 +3,7 @@ transport = ssh
 deprecation_warnings = false
 library = ./
 #show_custom_stats = true
-#stdout_callback = minimal
+stdout_callback = selective
 
 [ssh_connection]
 ssh_args = -o ForwardAgent=yes -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null
