--- a/check.yml
+++ b/check.yml
@@ -15,3 +15,15 @@
           cur_state: "{{ last_state }}"
 - import_playbook: helper/update_check_state.yml
 - import_playbook: helper/save_state.yml
+- hosts: localhost
+  vars:
+      ok: "{{ cur_state['check_results'].values() | all }}"
+  tasks:
+      - debug:
+            msg: "all nodes are ok"
+        tags: [print_action]
+        when: ok
+      - fail:
+            msg: "some nodes are not running"
+        tags: [print_action]
+        when: not ok
