--- a/start.yml
+++ b/start.yml
@@ -14,7 +14,7 @@
 - name: reset and restart the network
   connection: ssh
   gather_facts: false
-  hosts: ted
+  hosts: "{{ host_group | default('all') }}"
   tasks:
       - import_tasks: helper/run.yml
 - hosts: localhost
