add run.sh; move ansible scripts to its dedicated dir

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,8 +1,7 @@
 [defaults]
 transport = ssh
 deprecation_warnings = false
-library = ./
-#show_custom_stats = true
+library = ./ansible/
 stdout_callback = selective
 
 [ssh_connection]
