--- a/ansible/start.yml
+++ b/ansible/start.yml
@@ -11,7 +11,7 @@
       fail: msg="nodes are already started"
       when: last_state['status']  == "started"
 
-- name: reset and restart the network
+- name: start the nodes
   hosts: "{{ host_group | default('all') }}"
   tasks:
     - import_tasks: helper/run.yml
