--- a/ansible/helper/stop.yml
+++ b/ansible/helper/stop.yml
@@ -1,3 +1,2 @@
 ---
-- name: stop gecko
-  command: kill {{ last_state['spawn_results'][inventory_hostname]['pid'] }}
+- command: kill {{ last_state['spawn_results'][inventory_hostname]['pid'] }}
