move gecko specific part to app/

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,7 +1,7 @@
 [defaults]
 transport = ssh
 deprecation_warnings = false
-library = ./ansible/
+library = ./
 stdout_callback = selective
 
 [ssh_connection]
