--- a/ansible/check.yml
+++ b/ansible/check.yml
@@ -6,8 +6,10 @@
   hosts: "{{ host_group | default('all') }}"
   tasks:
     - import_tasks: helper/check.yml
-      vars:
-        last_state: "{{ hostvars['localhost']['last_state'] }}"
+  vars:
+    last_state: "{{ hostvars['localhost']['last_state'] }}"
+    node_id: "{{ node_id | default(0) }}"
+    testbed: "{{ (testbed_prefix, run_id, nid) | path_join }}"
 
 - hosts: localhost
   tasks:
