--- a/ansible/stop.yml
+++ b/ansible/stop.yml
@@ -12,8 +12,11 @@
   hosts: "{{ host_group | default('all') }}"
   tasks:
     - import_tasks: helper/stop.yml
-      vars:
-        last_state: "{{ hostvars['localhost']['last_state'] }}"
+  vars:
+    last_state: "{{ hostvars['localhost']['last_state'] }}"
+    node_id: "{{ node_id | default(0) }}"
+    testbed: "{{ (testbed_prefix, run_id, nid) | path_join }}"
+
 - hosts: localhost
   tasks:
     - set_fact:
