--- a/ansible/reset.yml
+++ b/ansible/reset.yml
@@ -11,7 +11,7 @@
   vars:
     last_state: "{{ hostvars['localhost']['last_state'] }}"
     node_id: "{{ node_id | default(0) }}"
-    testbed: "{{ (testbed_prefix, run_id, nid) | path_join }}"
+    testbed: "{{ (testbed_prefix, run_id, node_id) | path_join }}"
 
 - hosts: localhost
   tasks:
