--- a/ansible/fetch.yml
+++ b/ansible/fetch.yml
@@ -12,5 +12,8 @@
   hosts: "{{ host_group | default('all') }}"
   tasks:
     - import_tasks: helper/fetch.yml
-      vars:
-        work_dir: "{{ hostvars['localhost']['work_dir'] }}"
+  vars:
+    work_dir: "{{ hostvars['localhost']['work_dir'] }}"
+    last_state: "{{ hostvars['localhost']['last_state'] }}"
+    nid: "{{ node_id | default(0) }}"
+    testbed: "{{ (testbed_prefix, run_id, nid) | path_join }}"
