--- a/ansible/reset.yml
+++ b/ansible/reset.yml
@@ -10,8 +10,8 @@
     - import_tasks: "{{ reset_tasks | default('../app/reset.yml') }}"
   vars:
     last_state: "{{ hostvars['localhost']['last_state'] }}"
-    node_id: "{{ node_id | default(0) }}"
-    testbed: "{{ (testbed_prefix, run_id, node_id) | path_join }}"
+    nid: "{{ node_id | default(0) }}"
+    testbed: "{{ (testbed_prefix, run_id, nid, '') | path_join }}"
 
 - hosts: localhost
   tasks:
