--- a/ansible/check.yml
+++ b/ansible/check.yml
@@ -3,19 +3,22 @@
 - import_playbook: helper/load_state.yml
 
 - name: check if nodes are still running
-  hosts: "{{ host_group | default('all') }}"
+  hosts: "{{ ngroup }}"
   tasks:
     - import_tasks: helper/check.yml
   vars:
     last_state: "{{ hostvars['localhost']['last_state'] }}"
     nid: "{{ node_id | default(0) }}"
-    testbed: "{{ (testbed_prefix, run_id, nid) | path_join }}"
+    ngroup: "{{ node_group | default('nodes') }}"
+    testbed: "{{ (testbed_prefix, run_id, nid, '') | path_join }}"
 
 - hosts: localhost
   tasks:
     - set_fact:
         cur_state: "{{ last_state }}"
 - import_playbook: helper/update_check_state.yml
+  vars:
+    ngroup: "{{ node_group | default('nodes') }}"
 - import_playbook: helper/save_state.yml
 - hosts: localhost
   vars:
