--- a/ansible/reset.yml
+++ b/ansible/reset.yml
@@ -3,7 +3,7 @@
 - import_playbook: helper/load_state.yml
 
 - name: kill all nodes and reset their states
-  hosts: "{{ host_group | default('all') }}"
+  hosts: "{{ ngroup }}"
   tasks:
     - import_tasks: helper/kill.yml
     - import_tasks: "{{ build_tasks | default('../app/build.yml') }}"
@@ -11,6 +11,7 @@
   vars:
     last_state: "{{ hostvars['localhost']['last_state'] }}"
     nid: "{{ node_id | default(0) }}"
+    ngroup: "{{ node_group | default('nodes') }}"
     testbed: "{{ (testbed_prefix, run_id, nid, '') | path_join }}"
 
 - hosts: localhost
