--- a/ansible/start.yml
+++ b/ansible/start.yml
@@ -12,17 +12,20 @@
       when: last_state['status']  == "started"
 
 - name: start the nodes
-  hosts: "{{ host_group | default('all') }}"
+  hosts: "{{ ngroup }}"
   tasks:
     - import_tasks: "{{ run_tasks | default('../app/run.yml') }}"
   vars:
     last_state: "{{ hostvars['localhost']['last_state'] }}"
     nid: "{{ node_id | default(0) }}"
-    testbed: "{{ (testbed_prefix, run_id, nid) | path_join }}"
+    ngroup: "{{ node_group | default('nodes') }}"
+    testbed: "{{ (testbed_prefix, run_id, nid, '') | path_join }}"
 
 - hosts: localhost
   tasks:
     - set_fact:
         cur_state: "{{ last_state | combine({'status': 'started'}) }}"
 - import_playbook: helper/update_spawn_state.yml
+  vars:
+    ngroup: "{{ node_group | default('nodes') }}"
 - import_playbook: helper/save_state.yml
