--- a/ansible/stop.yml
+++ b/ansible/stop.yml
@@ -9,13 +9,14 @@
       when: last_state['status']  != "started"
 
 - name: stop all nodes
-  hosts: "{{ host_group | default('all') }}"
+  hosts: "{{ ngroup }}"
   tasks:
     - import_tasks: helper/stop.yml
   vars:
     last_state: "{{ hostvars['localhost']['last_state'] }}"
     nid: "{{ node_id | default(0) }}"
-    testbed: "{{ (testbed_prefix, run_id, nid) | path_join }}"
+    ngroup: "{{ node_group | default('nodes') }}"
+    testbed: "{{ (testbed_prefix, run_id, nid, '') | path_join }}"
 
 - hosts: localhost
   tasks:
