--- a/nodes.yml
+++ b/nodes.yml
@@ -1,14 +1,17 @@
 ---
-ted:
+nodes_setup:
+  hosts:
+    tedharbor.ava.network:
+
+nodes:
+  hosts:
+    bootstrap1:
+      ansible_host: tedharbor.ava.network
+      node_ip: "127.0.0.1"
+      node_id: 0
+      staking_port: 22000
   children:
-    ted_bootstrap:
-      hosts:
-        bootstrap1:
-          ansible_host: tedharbor.ava.network
-          node_ip: "127.0.0.1"
-          node_id: 0
-          staking_port: 22000
-    ted_nodes:
+    nodes_non_bootstrap:
       hosts:
         node1:
           ansible_host: tedharbor.ava.network
