--- a/ansible/fetch.yml
+++ b/ansible/fetch.yml
@@ -15,6 +15,6 @@
   vars:
     work_dir: "{{ hostvars['localhost']['work_dir'] }}"
     last_state: "{{ hostvars['localhost']['last_state'] }}"
-    nid: "{{ node_id | default(0) }}"
+    nid: "{{ host_idx | default(0) }}"
     ngroup: "{{ node_group | default('nodes') }}"
     testbed: "{{ (testbed_prefix, run_id, nid, '') | path_join }}"
