--- a/ansible/start.yml
+++ b/ansible/start.yml
@@ -17,7 +17,7 @@
     - import_tasks: "{{ run_tasks | default('../app/run.yml') }}"
   vars:
     last_state: "{{ hostvars['localhost']['last_state'] }}"
-    nid: "{{ node_id | default(0) }}"
+    nid: "{{ host_idx | default(0) }}"
     ngroup: "{{ node_group | default('nodes') }}"
     testbed: "{{ (testbed_prefix, run_id, nid, '') | path_join }}"
 
