--- a/nodes.yml
+++ b/nodes.yml
@@ -7,17 +7,17 @@ nodes:
   hosts:
     bootstrap1:
       ansible_host: tedharbor.ava.network
-      node_ip: "127.0.0.1"
-      node_id: 0
+      listen_ip: "127.0.0.1"
+      host_idx: 0
       staking_port: 22000
   children:
     nodes_non_bootstrap:
       hosts:
         node1:
           ansible_host: tedharbor.ava.network
-          node_ip: "127.0.0.1"
-          node_id: 1
+          listen_ip: "127.0.0.1"
+          host_idx: 1
         node2:
           ansible_host: tedharbor.ava.network
-          node_ip: "127.0.0.1"
-          node_id: 2
+          listen_ip: "127.0.0.1"
+          host_idx: 2
