--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -1,12 +1,21 @@
 ---
+## basic config
+
 ansible_connection: ssh
 ansible_user: ubuntu
+# change to your aws ec2 key file here
 ansible_ssh_private_key_file: ~/.ssh/ted-ava-key.pem
-
+# process name that is used by killall in reset
 bin_name: "ava"
+# remote directory that keeps the work directory for the running app
 testbed_prefix: "~/testbed"
+
+## app specific config
+
 gecko_network_id: "borealis"
+# remote repo path
 gecko_repo_dir: "~/go/src/github.com/ava-labs/gecko"
+# local source code path (that will be copied to the remote)
 gecko_local_repo_dir: "./gecko"
 gecko_db_dir: "db"
 gecko_log_dir: "log"
