--- a/app/_setup.yml
+++ b/app/_setup.yml
@@ -1,6 +1,10 @@
 ---
 - name: setup gecko binaries
   block:
+    - apt_repository:
+        repo: ppa:longsleep/golang-backports
+      become: true
+      become_user: root
     - apt:
         pkg:
           - libssl-dev
@@ -9,7 +13,7 @@
           - make
           - curl
           - g++
-          - golang-go
+          - golang-1.13
         state:
           latest
       become: true
