--- a/app/run.yml
+++ b/app/run.yml
@@ -44,5 +44,5 @@
       vars:
         ansible_python_interpreter: /usr/bin/python3
       environment:
-        PATH: /sbin:/usr/sbin:/bin:/usr/bin:/usr/local/bin:/snap/bin:/usr/local/go/bin
+        PATH: /sbin:/usr/sbin:/bin:/usr/bin:/usr/local/bin:/snap/bin:/usr/lib/go-1.13/bin
       register: spawn_results
