--- a/app/_setup.yml
+++ b/app/_setup.yml
@@ -24,7 +24,6 @@
     - synchronize:
         archive: true
         delete: true
-        src: "{{ (work_dir, gecko_local_repo_dir, '') | path_join }}"
+        src: "{{ (workdir, gecko_local_repo_dir, '') | path_join }}"
         dest: "{{ gecko_repo_dir }}"
         mode: push
-    - import_tasks: build.yml
