--- a/app/run.yml
+++ b/app/run.yml
@@ -19,19 +19,22 @@
         api_admin_enabled: "{{ gecko_api_admin_enabled | default(true)}}"
         api_keystore_enabled: "{{ gecko_api_keystore_enabled | default(true) }}"
         api_metrics_enabled: "{{ gecko_api_metrics_enabled | default(true) }}"
+        api_ipcs_enabled: "{{ gecko_api_ipcs_enabled | default(false) }}"
         ava_tx_fee: "{{ gecko_ava_tx_fee | default(0) }}"
         assertions_enabled: "{{ gecko_assertions_enabled | default(true) }}"
         signature_verification_enabled: "{{ gecko_signature_verification_enabled | default(true) }}"
         db_enabled: "{{ gecko_db_enabled | default(true) }}"
         db_dir: "{{ db_dir }}"
-        http_port: "{{ http_port | default((base_http_port | default(20000)) + (nid | int)) }}"
+        http_port: "{{ gecko_http_port | default((gecko_base_http_port | default(20000)) + (nid | int)) }}"
         http_tls_enabled: "{{ gecko_http_tls_enabled | default(false) }}"
         http_tls_key_file: "{{ gecko_http_tls_key_file | default('') }}"
         http_tls_cert_file: "{{ gecko_http_tls_cert_file | default('') }}"
         bootstrap_ips: "{{ gecko_bootstrap_ips | default('') }}"
         bootstrap_ids: "{{ gecko_bootstrap_ids | default('') }}"
-        staking_port: "{{ staking_port | default((base_staking_port | default(21000)) + (nid | int)) }}"
+        staking_port: "{{ gecko_staking_port | default((gecko_base_staking_port | default(21000)) + (nid | int)) }}"
         staking_tls_enabled: "{{ gecko_staking_tls_enabled | default(true) }}"
+        staking_tls_key_file: "{{ gecko_staking_tls_key_file | default('') }}"
+        staking_tls_cert_file: "{{ gecko_staking_tls_cert_file | default('') }}"
         log_dir: "{{ log_dir }}"
         log_level: "{{ gecko_log_level | default('debug') }}"
         snow_sample_size: "{{ gecko_snow_sample_size | default(3) }}"
@@ -40,7 +43,10 @@
         snow_rogue_commit_threshold: "{{ gecko_snow_rogue_commit_threshold | default(30) }}"
         snow_avalanche_num_parents: "{{ gecko_snow_avalanche_num_parents | default(5) }}"
         snow_avalanche_batch_size: "{{ gecko_snow_avalanche_batch_size | default(30) }}"
+        plugin_dir: "{{ gecko_plugin_dir | default('/home/ubuntu/go/src/github.com/ava-labs/gecko/build/plugins') }}"
         public_ip: "{{ listen_ip | default(ansible_default_ipv4.address) }}"
+        xput_server_enabled: "{{ gecko_xput_sever_enabled | default(false) }}"
+        xput_server_port: "{{ gecko_xput_sever_port | default(21002) }}"
       vars:
         ansible_python_interpreter: /usr/bin/python3
       environment:
