--- a/nodes.ini
+++ b/nodes.ini
@@ -1,12 +1,17 @@
 [nodes_setup]
-tedharbor.ava.network
 
 [nodes]
-bootstrap1 ansible_host=tedharbor.ava.network host_idx=0 listen_ip=127.0.0.1 staking_port=22000
+bootstrap1 ansible_host=34.226.200.77 gecko_staking_port=22000
 
 [nodes_non_bootstrap]
-node1 ansible_host=tedharbor.ava.network host_idx=1 listen_ip=127.0.0.1
-node2 ansible_host=tedharbor.ava.network host_idx=2 listen_ip=127.0.0.1
+node1 ansible_host=3.93.54.67
+node2 ansible_host=3.80.241.132
+node3 ansible_host=35.173.185.61
+node4 ansible_host=54.174.136.72
+
+[nodes_setup:children]
+nodes
+nodes_non_bootstrap
 
 [nodes:children]
 nodes_non_bootstrap
