--- a/group_vars/nodes_non_bootstrap.yml
+++ b/group_vars/nodes_non_bootstrap.yml
@@ -1,3 +1,3 @@
 ---
-gecko_bootstrap_ips: "{{ '{}:{}'.format(hostvars['bootstrap1']['listen_ip'], hostvars['bootstrap1']['staking_port']) }}"
-gecko_bootstrap_ids: "7Xhw2mDxuDS44j42TCB6U5579esbSt3Lg"
+gecko_bootstrap_ips: "{{ '{}:{}'.format(hostvars['bootstrap1'].ansible_host, hostvars['bootstrap1']['gecko_staking_port']) }}"
+gecko_bootstrap_ids: "NX4zVkuiRJZYe6Nzzav7GXN3TakUet3C"
