--- a/app/run.yml
+++ b/app/run.yml
@@ -39,8 +39,8 @@
         bootstrap_ids: "{{ gecko_bootstrap_ids | default('') }}"
         staking_port: "{{ gecko_staking_port | default((gecko_base_staking_port | default(21000)) + (nid | int)) }}"
         staking_tls_enabled: "{{ gecko_staking_tls_enabled | default(true) }}"
-        staking_tls_key_file: "{{ gecko_staking_tls_key_file | default('') }}"
-        staking_tls_cert_file: "{{ gecko_staking_tls_cert_file | default('') }}"
+        staking_tls_key_file: "{{ gecko_staking_tls_key_file | default('/home/ubuntu/go/src/github.com/ava-labs/gecko/staking/local/staker{}.key'.format((stakerid | int))) }}"
+        staking_tls_cert_file: "{{ gecko_staking_tls_cert_file | default('/home/ubuntu/go/src/github.com/ava-labs/gecko/staking/local/staker{}.crt'.format((stakerid | int))) }}"
         log_dir: "{{ log_dir }}"
         log_level: "{{ gecko_log_level | default('debug') }}"
         snow_sample_size: "{{ gecko_snow_sample_size | default(3) }}"
