--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -19,9 +19,9 @@ gecko_repo_dir: "~/go/src/github.com/ava-labs/gecko"
 gecko_local_repo_dir: "./gecko"
 gecko_db_dir: "db"
 gecko_log_dir: "log"
-gecko_network_id: "cascade"
+gecko_network_id: "local"
 gecko_base_http_port: 21000
 gecko_base_staking_port: 21001
-gecko_staking_tls_key_file: "/home/ubuntu/keys/staker.key"
-gecko_staking_tls_cert_file: "/home/ubuntu/keys/staker.crt"
+#gecko_staking_tls_key_file: "/home/ubuntu/keys/staker.key"
+#gecko_staking_tls_cert_file: "/home/ubuntu/keys/staker.crt"
 gecko_plugin_dir: "/home/ubuntu/go/src/github.com/ava-labs/gecko/build/plugins"
