--- a/nodes.ini
+++ b/nodes.ini
@@ -1,13 +1,13 @@
 [nodes_setup]
 
 [nodes]
-bootstrap1 ansible_host=34.226.200.77 gecko_staking_port=22000
+bootstrap1 ansible_host=34.226.200.77 gecko_staking_port=22000 stakerid=1
 
 [nodes_non_bootstrap]
-node1 ansible_host=3.93.54.67
-node2 ansible_host=3.80.241.132
-node3 ansible_host=35.173.185.61
-node4 ansible_host=54.174.136.72
+node1 ansible_host=3.93.54.67 stakerid=2
+node2 ansible_host=3.80.241.132 stakerid=3
+node3 ansible_host=35.173.185.61 stakerid=4
+node4 ansible_host=54.174.136.72 stakerid=5
 
 [nodes_setup:children]
 nodes
